sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value lgr
  var ecart=lgr
            ^AlgCombSort:10: error: not found: value i
    i=0
    ^AlgCombSort:12: error: not found: value i
    while (i+ecart<lgr) {
           ^AlgCombSort:12: error: not found: value lgr
    while (i+ecart<lgr) {
                   ^AlgCombSort:13: error: not found: value i
      if (!plusPetit(i, i+ecart)) {
                     ^AlgCombSort:13: error: not found: value i
      if (!plusPetit(i, i+ecart)) {
                        ^AlgCombSort:14: error: not found: value i
        echange(i, i+ecart)
                ^AlgCombSort:14: error: not found: value i
        echange(i, i+ecart)
                   ^AlgCombSort:16: error: not found: value i
      i=i+1
      ^